--- a/assets/index.html
+++ b/assets/index.html
@@ -18,33 +18,36 @@
     </div>
     <div class="weather-container">
         <div class="weather-card">
-          <h2>Day 1</h2>
-          <p class="temperature">25°C</p>
-          <p class="description">Sunny</p>
+        <h1>Current Weather</h1>
+        <h2 class="city">Dallas</h2>
+        <h1 class="temp">80°C</h1>
+        <div class="col">
+            <p class="description">sunny</p>
+            <p class="humidity">humidity:20%</p>
         </div>
-      
+    </div>
         <div class="weather-card">
           <h2>Day 2</h2>
-          <p class="temperature">20°C</p>
-          <p class="description">Cloudy</p>
+          <p class="temperature-2">20°C</p>
+          <p class="description-2">Cloudy</p>
         </div>
 
         <div class="weather-card">
             <h2>Day 3</h2>
-            <p class="temperature">50°C</p>
-            <p class="description">Sunny</p>
+            <p class="temperature-3">50°C</p>
+            <p class="description-3">Sunny</p>
           </div>
 
           <div class="weather-card">
             <h2>Day 4</h2>
-            <p class="temperature">20°C</p>
-            <p class="description">Rain</p>
+            <p class="temperature-4">20°C</p>
+            <p class="description-4">Rain</p>
           </div>
 
           <div class="weather-card">
             <h2>Day 5</h2>
-            <p class="temperature">16°C</p>
-            <p class="description">Windy</p>
+            <p class="temperature-5">16°C</p>
+            <p class="description-5">Windy</p>
           </div>
     </div>
   
@@ -57,6 +60,6 @@
 
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
-   <script src="/assets/js/script.js"></script>  
+   <script src="./js/script.js"></script>  
 </body>
 </html>
