added 5-day-forecast to weather dashboard

--- a/assets/index.html
+++ b/assets/index.html
@@ -13,41 +13,41 @@
         <label for="formGroupExampleInput" class="form-label">Search City Here:</label>
         <input type="text" class="form-control" id="text-city" placeholder="City...">
         <div class="d-grid gap-2 col-10 mx-10">
-          <button class="btn btn-primary" type="button">Search</button>
+          <button class="btn btn-primary" id="search-city" type="button">Search</button>
         </div>
     </div>
     <div class="weather-container">
         <div class="weather-card">
-        <h1>Current Weather</h1>
-        <h2 class="city">Dallas</h2>
-        <h1 class="temp">80°C</h1>
+        <h2>Current Weather</h2>
+        <h2 class="city">.....</h2>
+        <h1 class="temp">0°F</h1>
         <div class="col">
-            <p class="description">sunny</p>
-            <p class="humidity">humidity:20%</p>
+            <h4><p class="description">...</p></h4>
+            <p class="humidity">humidity:..%</p>
         </div>
     </div>
-        <div class="weather-card">
+        <div class="weather-card" id="weather-two">
           <h2>Day 2</h2>
-          <p class="temperature-2">20°C</p>
-          <p class="description-2">Cloudy</p>
+          <h1><p class="temperature-2">0°F</p></h1>
+          <h4><p class="description-2">...</p></h4>
         </div>
 
-        <div class="weather-card">
+        <div class="weather-card" id="weather-three">
             <h2>Day 3</h2>
-            <p class="temperature-3">50°C</p>
-            <p class="description-3">Sunny</p>
+            <h1><p class="temperature-3">0°F</p></h1>
+            <h4><p class="description-3">...</p></h4>
           </div>
 
-          <div class="weather-card">
+          <div class="weather-card" id="weather-four">
             <h2>Day 4</h2>
-            <p class="temperature-4">20°C</p>
-            <p class="description-4">Rain</p>
+            <h1><p class="temperature-4">0°F</p></h1>
+            <h4><p class="description-4">...</p></h4>
           </div>
 
-          <div class="weather-card">
+          <div class="weather-card" id="weather-five">
             <h2>Day 5</h2>
-            <p class="temperature-5">16°C</p>
-            <p class="description-5">Windy</p>
+            <h1><p class="temperature-5">0°F</p></h1>
+            <h4><p class="description-5">...</p></h4>
           </div>
     </div>
   
