Added weather icon but cant get to render

--- a/assets/index.html
+++ b/assets/index.html
@@ -21,6 +21,7 @@
         <h2>Current Weather</h2>
         <h2 class="city">.....</h2>
         <h1 class="temp">0°F</h1>
+        <img src="./styles/images/sunny.png" class="weather-icon">
         <div class="col">
             <h4><p class="description">...</p></h4>
             <p class="humidity">humidity:..%</p>
@@ -29,24 +30,28 @@
         <div class="weather-card" id="weather-two">
           <h2>Day 2</h2>
           <h1><p class="temperature-2">0°F</p></h1>
+          <img src="./styles/images/rain.png" class="weather-icon" id="dayTwo">
           <h4><p class="description-2">...</p></h4>
         </div>
 
         <div class="weather-card" id="weather-three">
             <h2>Day 3</h2>
             <h1><p class="temperature-3">0°F</p></h1>
+            <img src="./styles/images/clear.png" class="weather-icon" id="dayThree">
             <h4><p class="description-3">...</p></h4>
           </div>
 
           <div class="weather-card" id="weather-four">
             <h2>Day 4</h2>
             <h1><p class="temperature-4">0°F</p></h1>
+            <img src="./styles/images/cloudy.png" class="weather-icon" id="dayFour">
             <h4><p class="description-4">...</p></h4>
           </div>
 
           <div class="weather-card" id="weather-five">
             <h2>Day 5</h2>
             <h1><p class="temperature-5">0°F</p></h1>
+            <img src="./styles/images/clear.png" class="weather-icon" id="dayFive">
             <h4><p class="description-5">...</p></h4>
           </div>
     </div>
