--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="./styles.css">
     <title>Weather Dashboard</title>
 </head>
 <body>
@@ -21,7 +21,7 @@
         <h2>Current Weather</h2>
         <h2 class="city">.....</h2>
         <h1 class="temp">0°F</h1>
-        <img src="./styles/images/sunny.png" class="weather-icon">
+        <img src="./Assets/images/clear.png" class="weather-icon" id="weather-icon-one">
         <div class="col">
             <h4><p class="description">...</p></h4>
             <p class="humidity">humidity:..%</p>
@@ -30,28 +30,28 @@
         <div class="weather-card" id="weather-two">
           <h2>Day 2</h2>
           <h1><p class="temperature-2">0°F</p></h1>
-          <img src="./styles/images/rain.png" class="weather-icon" id="dayTwo">
+          <img src="./Assets/images/sunny.png" class="weather-icon" id="weather-icon-two">
           <h4><p class="description-2">...</p></h4>
         </div>
 
         <div class="weather-card" id="weather-three">
             <h2>Day 3</h2>
             <h1><p class="temperature-3">0°F</p></h1>
-            <img src="./styles/images/clear.png" class="weather-icon" id="dayThree">
+            <img src="./Assets/images/cloudy.png" class="weather-icon" id="weather-icon-three">
             <h4><p class="description-3">...</p></h4>
           </div>
 
           <div class="weather-card" id="weather-four">
             <h2>Day 4</h2>
             <h1><p class="temperature-4">0°F</p></h1>
-            <img src="./styles/images/cloudy.png" class="weather-icon" id="dayFour">
+            <img src="./Assets/images/rain.png" class="weather-icon" id="weather-icon-four">
             <h4><p class="description-4">...</p></h4>
           </div>
 
           <div class="weather-card" id="weather-five">
             <h2>Day 5</h2>
             <h1><p class="temperature-5">0°F</p></h1>
-            <img src="./styles/images/clear.png" class="weather-icon" id="dayFive">
+            <img src="./Assets/images/cloudy.png" class="weather-icon" id="weather-icon-five">
             <h4><p class="description-5">...</p></h4>
           </div>
     </div>
@@ -65,6 +65,6 @@
 
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
-   <script src="./js/script.js"></script>  
+   <script src="./script.js"></script>  
 </body>
 </html>
