changed input place holder

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="citySearch">
         <label for="formGroupExampleInput" class="form-label">Search City Here:</label>
-        <input type="text" class="form-control" id="text-city" placeholder="City...">
+        <input type="text" class="form-control" id="text-city" placeholder="State/City...">
         <div class="d-grid gap-2 col-10 mx-10">
           <button class="btn btn-primary" id="search-city" type="button">Search</button>
         </div>
